--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ REPOS=[{"name": "frontend", "localPath": "/path/to/frontend", "defaultBranch": "
 # Paths
 WORKTREE_BASE_PATH=/path/to/autozerts/worktrees
 PLAN_FILES_PATH=/path/to/autozerts/plans
+LOG_FILES_PATH=/path/to/autozerts/logs
 
 # Git identity for commits created by Claude (not your personal credentials)
 GIT_AUTHOR_NAME=AutoZerts
